--- a/html.html
+++ b/html.html
@@ -20,8 +20,8 @@
         <script src="https://preview.babylonjs.com/serializers/babylonjs.serializers.min.js"></script>
         <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
         <script src="https://preview.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
-        <script src="classes/track.class.js"></script>
-        <script src="classes/previewblock.class.js"></script>
+        <script src="jsclasses/track.class.js"></script>
+        <script src="jsclasses/previewblock.class.js"></script>
 
         <style>
             html, body {
@@ -99,8 +99,6 @@
                 track.addTrack(previewblock.box);
             }
         }
-
-
 
         return scene;
     };
